--- a/server/.env
+++ b/server/.env
@@ -6,4 +6,4 @@ CLOUDFLARE_ACCOUNT_ID=""
 CLOUDFLARE_ACCESS_KEY_ID=""
 CLOUDFLARE_SECRET_ACCESS_KEY=""
 CLOUDFLARE_BUCKET=""
-CLOUDFLARE_PUBLIC_URL="example.co.br.org" 
+CLOUDFLARE_PUBLIC_URL="https://www.google.com/" 
