--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
 PORT=3333
 NODE_ENV=test
-DATABASE_URL="posgresql://docker:docker@localhost:5432/brevly_test"
+DATABASE_URL="postgresql://docker:docker@localhost:5432/brevly_test"
 
 CLOUDFLARE_ACCOUNT_ID=""
 CLOUDFLARE_ACCESS_KEY_ID=""
